@@ -1,6 +1,11 @@
 cdebconf (0.127) UNRELEASED; urgency=low
 
+  [ Colin Watson ]
   * Make PROGRESS fail with a syntax error when given an unknown subcommand.
+
+  [ Jérémy Bobbio ]
+  * Correctly handle click on the "Cancel" button during progress operations
+    in the GTK+ frontend.  (Closes: #453703)
 
  -- Colin Watson <cjwatson@debian.org>  Tue, 22 Jan 2008 15:44:34 +0000
 
